fix: update CORS to allow all Vercel preview URLs and fix OPTIONS preflight handling